--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -20,9 +20,8 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição!!</p>
     <script>
-        window.alert('minha primeira mensagem')
-        window.confirm('Está gostando de JavaScript?')
-        window.prompt('Qual é seu nome?')
+        var nome = window.prompt('Qual é seu nome?')
+        window.alert('é um grande prazer em te conhecer, ' + nome + '!')
     </script>
 </body>
 </html>
