--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiros passos com o DOM</title>
 </head>
 <body>
-    
+    <h1>Iniciando estudos DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <div>Clique em mim</div>
 </body>
 </html>
