--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -16,12 +16,16 @@
     </style>
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
+    <div id="area"">
         Interaja...
     </div>
 
     <script>
         var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
         function clicar() {
             
             a.innerText = 'Clicou'
@@ -34,6 +38,7 @@
         }
         function sair() {
             a.innerText = 'Saiu!'
+            a.style.background = 'green'
         }
     </script>
 </body>
