--- a/aula12ex/ex14/modelo.html
+++ b/aula12ex/ex14/modelo.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>Testando...</div>
-        <div>Olá</div>
+        <div id="msg">
+            Aqui vai aparecer a msg...
+        </div>
+        <div id="foto">
+            <img id="imagem" src="manha.jpg" alt="Foto do dia">
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVídeo</p>
