--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos contar</h1>
     </header>
     <section>
-        <div>Testando...</div>
-        <div>Olá</div>
+        <div id="dados">
+            <p><label for="ini">início:</label><input type="number" name="ini" id="ini"></p>
+            <p><label for="fim">Fim:</label><input type="number" name="fim" id="fim"></p>
+            <p><label for="pas">Passo:</label><input type="number" name="pas" id="pas"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
+        </div>  
+        <div id="res">
+            Preparando a contagem..
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVídeo</p>
