--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -14,10 +14,8 @@
         <div>
             <p><label for="txtn">Número: </label><input type="number" name="txtn" id="txtn"><input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-        <div>
-            <select name="tabuada" id="seltab" size="10">
-                <option value="">Digite um número acima</option>
-            </select>
+        <div id="res">
+            
         </div>
     </section>
     <footer>
