--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -18,7 +18,7 @@
             <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>  
         <div id="res">
-            Preparando a contagem..
+            <p>Preparando a contagem...</p>
         </div>
     </section>
     <footer>
