--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -11,11 +11,11 @@
         <h1>Tabuada</h1>
     </header>
     <section>
-        <div>
+        <div id="bot">
             <p><label for="txtn">Número: </label><input type="number" name="txtn" id="txtn"><input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div id="res">
-            
+            Digite um número para gerar a tabuada!
         </div>
     </section>
     <footer>
